--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -20,3 +20,12 @@
 .App-link {
   color: #09d3ac;
 }
+
+polygon {
+  stroke-width: 1;
+  stroke: red;
+  fill: transparent;
+}
+polygon:hover {
+  fill: red;
+}
